[gd_scene load_steps=2 format=2]

[ext_resource path="res://VotingController.gd" type="Script" id=1]

[node name="VotingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.902
margin_top = 27.0601
margin_right = 22.9021
margin_bottom = 27.0601
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -225.0
margin_right = 125.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoteButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 180.0
margin_right = 60.0
margin_bottom = 210.0
text = "CAST VOTE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VoteButton" to="." method="_on_VoteButton_pressed"]
